Fixed z-index for cart dropdown

--- a/src/styles/components/_cart_dropdown.scss
+++ b/src/styles/components/_cart_dropdown.scss
@@ -13,7 +13,7 @@
     padding: 10px 10px 50px;
     max-height: 400px;
     width: 250px;
-    z-index: 100;
+    z-index: 1000;
 
     border: 1px solid $color-black;
     background: $color-white;
